# Failed to link against C# .lib file (NativeAOT issue on Windows)
# Switching to dynamic loading via libloading crate.

[package]
name = "crawlcipher-terminal"
version = "1.0.0"
edition = "2021"
authors = ["crawlcipher Developer"]
description = "crawlcipher Terminal UI - Rust terminal interface for crawlcipher game"

[[bin]]
name = "crawlcipher"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
libloading = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
stellar-strkey = "0.0.8"
ed25519-dalek = "2.1"
rand = "0.8"
webbrowser = "0.8"
rust-embed = "8.0"
